# smartermcp

./: .env  CONTRIBUTING.md  Dockerfile  INTEGRATION-README.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test-update-checker.js
.github/ISSUE_TEMPLATE/: bug_report.md
actions/: odoo-create-tenant-action.js
actions/odoo/: odoo-tenant-creator.js
config/: hostinger-mcp-config.json  hostinger.json
docs/: installation.md
middleware/: auth.js
rules/: update-monitoring.yaml
runtime/: base-rules.active  ventas.active
scouts/: n8n-update-checker.js  update-checker.js
scripts/: create-maestroya-tenant.js
src/: index.js
src/oauth/: jwt_handler.py  token.py
tests/oauth/: test_jwt_validation.py  test_oauth_flow_headless.py
tools/: n8n-odoo-connector.js
